[package]
name = "commons"
version = "0.1.0"
authors = ["sisso <sisso@sisso.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# math
nalgebra = { version = "0.21.0", features = ["mint"] }
approx = "0.3.2"

# tools
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
itertools = "*"

# spec
specs = { version = "0.16.*", features = ["serde"] }
specs-derive = "0.4.0"
shred = { version = "0.10.*", default-features = false }
shred-derive = "0.6.*"

# 3d
ggez = "0.6"


