[package]
name = "gravity"
version = "0.1.0"
authors = ["sisso <sisso@sisso.com.br>"]
edition = "2018"

[dependencies]
ggez = "0.6"
cgmath = { version = "0.17", features = ["mint"]}
mint = "0.5"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
specs = { version = "0.16.*", features = ["serde"] }
specs-derive = "0.4.0"
shred = { version = "0.10.*", default-features = false }
shred-derive = "0.6.*"

