[package]
name = "space-2d-gui"
version = "0.1.0"
authors = ["sisso <sisso@sisso.com.br>"]
edition = "2018"

[profile.dev]
opt-level = 1

[dependencies]
ggez = "0.6"
mint = "0.5"
nalgebra = { version = "0.21.0", features = ["mint"] }
approx = "0.3.2"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.7"
specs = { version = "0.16.*", features = ["serde"] }
specs-derive = "0.4.0"
shred = { version = "0.10.*", default-features = false }
shred-derive = "0.6.*"

